# epp-enjoy

./: README.md  pyproject.toml  test.py
pyenjoy/: __init__.py
pyenjoy/definition/: __init__.py  register_names.py  register_values.py
pyenjoy/definition/models/: __init__.py
